--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "labor-feis-web",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "disqus-react": "^1.1.5"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.3",
-    "postcss": "8.4.31",
-    "autoprefixer": "10.4.15"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "tailwindcss": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest"
   }
 }
